# XcodeBackup

./: TCPUART.c  TCPUART.h
AlgorithmPractice/: CMakeLists.txt  Log.txt
AlgorithmPractice/#155 ltc-min_stack/: main(AC).cpp
AlgorithmPractice/#200 ltc-Number_of_islands/: main.cpp
AlgorithmPractice/#208 ltc-implement_tree(prefix tree)/: main(AC_NotMyOwn).cpp  v2.cpp
AlgorithmPractice/#224 ltc-basic_calculator/: V2.cpp  V3(Runtime Error).cpp  V4(#227AC).cpp  main.cpp
AlgorithmPractice/#226 ltc-invert_binary_tree/: main(AC).cpp
AlgorithmPractice/#258 ltc-add_digits/: AC.cpp
AlgorithmPractice/#263 ltc-ugly-number/: v1(TLE).cpp  v2.cpp  v3(AC).cpp
AlgorithmPractice/#264 ltc-ugly_numbers_II/: main.cpp  v2(Memory Limit & C array length).cpp  v3.cpp  v4.cpp
AlgorithmPractice/#273 ltc-Integer_2_English_Words/: Problems.txt  V2.cpp  main.cpp  v3(AC).cpp
AlgorithmPractice/#7 ltc-reverse_integer/: main.cpp
AlgorithmPractice/AlTest/: 4.cpp  5.cpp  main.cpp
AlgorithmPractice/AlgorithmPractice/: main.cpp
AlgorithmPractice/AlgorithmPractice.xcodeproj/: project.pbxproj
AlgorithmPractice/AlgorithmPractice.xcodeproj/project.xcworkspace/xcuserdata/Esmidth.xcuserdatad/: UserInterfaceState.xcuserstate
AlgorithmPractice/AlgorithmPractice.xcodeproj/xcuserdata/Esmidth.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AlgorithmPractice/AlgorithmPractice.xcodeproj/xcuserdata/Esmidth.xcuserdatad/xcschemes/: #203.xcscheme  #224 ltc-basic_calculator.xcscheme  #224.xcscheme  #258 ltc-add_digits.xcscheme  #263 ltc-ugly-number.xcscheme  #264 ltc-ugly_numbers_II.xcscheme  #273 ltc-Integer_2_English_Words.xcscheme  #7 ltc-reverse_integer.xcscheme  AlTest.xcscheme  AlgorithmPractice.xcscheme  LXY.xcscheme  MaxLISLength.xcscheme  UVa 340 #Master-Mind Hints.xcscheme  leetcode-decode_ways #91.xcscheme  ltc#135.xcscheme  ltc#155.xcscheme  ltc#200.xcscheme  ltc#202.xcscheme  ltc#204.xcscheme  ltc#208.xcscheme  ltc#226.xcscheme  ltc-basic_calculator_ii #227.xcscheme  temp.xcscheme  test.xcscheme  (+2 more)
AlgorithmPractice/LXY/: main.cpp  v2.cpp  v3.cpp  v4.cpp
AlgorithmPractice/MaxLISLength/: main.cpp
AlgorithmPractice/UVa 340 #Master-Mind Hints/: V1.cpp
AlgorithmPractice/leetcode-candy/: main.cpp
AlgorithmPractice/leetcode-count-primes #204/: v1(Time Limit Exceeded).cpp  v2.cpp
AlgorithmPractice/leetcode-decode_ways #91/: V2.cpp  V3.cpp  main.cpp
AlgorithmPractice/leetcode-happy_number #202/: v1(AC).cpp
AlgorithmPractice/ltc-basic_calculator_ii #227/: main(AC).cpp  main.cpp
AlgorithmPractice/ltc-remove_linked_list_elements #203/: main.cpp  v2(AC).cpp
AlgorithmPractice/temp/: main.cpp
AlgorithmPractice/test/: main.cpp
AlgorithmPractice/test2/: main.cpp
(+420 files in other folders)
